syntax = "proto3";

package config;

option go_package = "./proto";

service ConfigService {
	// Get configuration for a service by its name
	rpc GetConfig(GetConfigRequest) returns (GetConfigResponse);
}

message GetConfigRequest {
	string service_name = 1;
}

message GetConfigResponse {
	map<string, string> config = 1;
}

message GetActiveServices{

}
message GetActiveServicesResponse{
	repeated string services = 1;
}
